--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 </section>
 
 <script src='js/jquery-3.3.1.min.js'></script>
-<script src='js/out.js'></script>
+<script src='js/app.js'></script>
 </body>
 
 </html>
